<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:elevation="7dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/petrole_500">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/textView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/drawer_sys"
        android:paddingLeft="15dp"
        android:paddingRight="70dp"
        android:onClick="onClickDrawer">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/ic_phone_android_black_48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_menu"
            android:id="@+id/drawer_sys_text"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageView"
            android:layout_marginStart="16dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/drawer_apps"
        android:paddingLeft="15dp"
        android:paddingRight="70dp"
        android:onClick="onClickDrawer">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/ic_apps_black_36dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_picker_name"
            android:id="@+id/drawer_apps_text"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageView2"
            android:layout_marginStart="16dp" />
    </RelativeLayout>     <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:id="@+id/drawer_login"
    android:paddingLeft="15dp"
    android:paddingRight="70dp"
    android:onClick="onClickDrawer" >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:src="@drawable/ic_vpn_key_black_36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_menu"
        android:id="@+id/login_stats_text"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/imageView5"
        android:layout_marginStart="16dp" />
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/drawer_stats"
        android:paddingRight="70dp"
        android:paddingLeft="15dp"
        android:onClick="onClickDrawer">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:src="@drawable/ic_security_black_36dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_menu"
            android:id="@+id/drawer_stats_text"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageView3"
            android:layout_marginStart="16dp" />
    </RelativeLayout>
</LinearLayout>

