<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context=".HTTPActivity"
    android:id="@+id/relativelayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/Grey"
        android:id="@+id/relativeLayout3"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton2"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:onClick="next_Page" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/next"
                android:id="@+id/textView4"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:src="@drawable/ic_keyboard_arrow_right_white_36dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/textView4" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="prev_Page">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4"
                android:src="@drawable/ic_keyboard_arrow_left_white_36dp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/finishBtn"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="finish">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/finish"
                android:id="@+id/textView5"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white" />

        </RelativeLayout>



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView android:text="@string/enrollment"
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/retry_btn"
            android:layout_alignStart="@+id/retry_btn"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry_btn"
            android:id="@+id/retry_btn"
            android:enabled="true"
            android:onClick="retry"
            android:clickable="true"
            android:textColor="@color/white"
            android:background="@color/petrole_500"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="20dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:indeterminateDrawable="@drawable/progress" >
        </ProgressBar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg_fail"
            android:layout_marginTop="40dp"
            android:id="@+id/connection_status"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/connection_status_text"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/connection_status_image"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_clear_white_48dp" />
        </RelativeLayout>

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_below="@+id/connection_status"
            android:id="@+id/space" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/serial_status"
            android:background="@drawable/layout_bg_ok"
            android:layout_below="@+id/space"
            android:layout_alignParentEnd="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/serial_status_text"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/serial_status_image"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_done_white_48dp" />
        </RelativeLayout>

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:id="@+id/space2"
            android:layout_below="@+id/serial_status" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/certificate_status"
            android:background="@drawable/layout_bg_ok"
            android:layout_below="@+id/space2"
            android:layout_alignParentEnd="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/certificate_status_text"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/certificate_status_image"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_done_white_48dp" />
        </RelativeLayout>

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:id="@+id/space3"
            android:layout_below="@+id/certificate_status" />


        <Button
            android:id="@+id/enrolment"

            android:text="@string/start_enrollment"
            android:textColor="#212121"
            android:textSize="16sp"
            android:elevation="0dp"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:background="@drawable/btn_enrolment"
            android:onClick="btn_click"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="59dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/errorMessage"
            android:layout_above="@+id/retry_btn"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/certificate_btn"
            android:id="@+id/certificate_btn"
            android:enabled="true"
            android:onClick="generate"
            android:clickable="true"
            android:textColor="@color/white"
            android:background="@color/petrole_500"
            android:textSize="20dp"
            android:layout_marginTop="19dp"
            android:layout_below="@+id/retry_btn"
            android:layout_alignEnd="@+id/enrolment" />

    </RelativeLayout>


</RelativeLayout>
